--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 
 <body>
     <div class="wrapper">
+        <div class="header">
+            <div class="choice-title">PLAYER CHOICE</div>
+            <div class="null"></div>
+            <div class="choice-title">COMPUTER CHOICE </div>
+        </div>
         <div class="game">
         <div class="player-choice">
-            <div class="choice-title">PLAYER CHOICE</div>
+            
             <div class="img-container">
                 <img src="img/rock.png" alt="A rock sign">
                 <img src="img/paper.png" alt="A paper sign">
@@ -32,7 +37,6 @@
             <button id="play-again">Start the game</button>
         </div>
         <div class="computer-choice">
-            <div class="choice-title">COMPUTER CHOICE </div>
             <div class="img-container">
                 <img src="img/question-mark.png" alt="A question mark">
             </div>
