--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="player-choice">
             
             <div class="img-container">
-                <img src="img/rock.png" alt="A rock sign">
-                <img src="img/paper.png" alt="A paper sign">
-                <img src="img/scissors.png" alt="A scissors sign">
+                <img src="img/rock.png" alt="A rock sign" id="rock">
+                <img src="img/paper.png" alt="A paper sign" id="paper">
+                <img src="img/scissors.png" alt="A scissors sign" id="scissors">
             </div>
         </div>
         <div class="scoreboard">
@@ -34,11 +34,11 @@
                 <div class="separator">:</div>
                 <div class="computer-score">0</div>
             </div>
-            <button id="play-again">Start the game</button>
+            <button id="play-again">Reset Score</button>
         </div>
         <div class="computer-choice">
             <div class="img-container">
-                <img src="img/question-mark.png" alt="A question mark">
+                <img src="img/question-mark.png" alt="A question mark" id="computer-choice">
             </div>
         </div>
     </div>
